Drop unneeded --add-exports flags and fork from gradle plugin